Localstorage when creating user works

--- a/frontpage.html
+++ b/frontpage.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script src="matchfunction.js"></script>
+
+<!-- Lav noget med at skifte til andre sider, lidt som i bis-->
+
     <h1>
         Velkommen til dating appen!
     </h1>
