--- a/Create.html
+++ b/Create.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Link til create.js-->
     <link href="css.css" rel="stylesheet">
 
 </head>
