--- a/frontpage.html
+++ b/frontpage.html
@@ -37,26 +37,18 @@
     </ul>
         </nav>
         
-    <div class="burger">
+    <!--div class="burger">
         <div class="line1"></div>
         <div class="line2"></div>
         <div class="line3"></div>
-    </div>
+    </div-->
 </nav>
     <h1>
         Velkommen til dating appen!
     </h1>
 
-   
-
-<!--
-    <label for="profile" id="profile">Indsæt profil her somehow</label><br>
-    <button onclick="myFunction()">like</button>
-    <p id="like"></p>
-    <input type="submit" id="dislikeBtn" value="Dislike"><br>
--->
     <p>Din profil:</p>
-    <p>Jens (Den profil der er logget ind skal: push username herind)</p>
+    <p>Jens (Den profil der er logget ind skal: push username herind)<!--https://stackoverflow.com/questions/52919972/javascript-populate-table--></p>
     <p id=""></p><br>
     <p>Tryk like for at tilføje profilen til dit "possible match" array. Liker personen dig igen, får du et match</p>
     <p id="profile"></p>
